[package]
name = "evscript"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "Desktop", "Input", "Evdev", "Keyboard", "Mouse", "Touchscreen", "Touchpad", "xcape" ]
description = "A tiny sandboxed Dyon scripting environment for evdev input devices"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/evscript"
repository = "https://github.com/myfreeweb/evscript"

[dependencies]
clap = "2"
rusty-sandbox = { git = "https://github.com/myfreeweb/rusty-sandbox", branch = "master" }
nix = "0"
evdev = { git = "https://github.com/emberian/evdev", branch = "release" }
dyon = { version = "0.46.0", default-features = false, features = ["debug_resolve"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
num = "0"
